themes/ecofair-theme/sass/_page-templates.scss
/*--------------------------------------------------------------
# Page Templates
--------------------------------------------------------------*/

/* All pages */

.site-content {
  background-color: $color__background-white;
  width: 100%;
  margin: 0 auto;
}

/* Front page */

// banner


.front-banner-grid {
  display: grid;
	grid-template-columns: repeat(3, 1fr);
  grid-gap: 0;
  grid-template-rows: 7vh 12vh 25vh 44vh 45vh;
  justify-self: right;
  padding-top: 5rem;
  padding-bottom: 3.8rem;
  margin: 0 auto;
  width: 98%;
  position: relative;

  @include desktop {
    display: grid;
    grid-gap: 1rem;
    grid-template-columns: repeat(20, 1fr);
    grid-template-rows: 1fr 1.5fr .5fr;
    width: 1920px;
    padding-top: 10rem;
    padding-bottom: 0rem;
    margin: 0 auto;

  }
}

.front-banner-img {
  background-image: url(../assets/images/heroimage01.jpeg);
  background-size: cover;
  background-position: right;
  grid-column-start: 2;
  grid-column-end: 4;
  grid-row-start: 1;
  grid-row-end: 4;
  width: 100%;
  z-index: 2;

  @include desktop {
    grid-column-start: 1;
    grid-column-end: 5;
    grid-row-start: 2;
    grid-row-end: 4;

  }  

}

.sqr-orange {
  grid-column-start: 1;
  grid-column-end: 2;
  grid-row-start: 3;
  grid-row-end: 4;
  justify-self: right;
  height: 6vh;
  width: 6vh;
  background-color: $color__orange-1;
  margin-right: 1rem;

  @include desktop {
    grid-column-start: 19;
    grid-column-end: 20;
    z-index: 2;
    margin-right: 0rem;
    justify-self: left;
  }  
}

.sqr-dr-green {
  grid-column-start: 1;
  grid-column-end: 2;
  grid-row-start: 2;
  grid-row-end: 3;
  justify-self: right;
  align-self: flex-start;
  height: 11vh;
  width: 11vh;
  background-color: $color__green-1;
  margin-right: 1rem;

  @include desktop {
    grid-column-start: 3;
    grid-column-end: 5;
    grid-row-start: 1;
    grid-row-end: 2;
    margin-left: 1rem;
    margin-right: 0rem;
    height: 176px;
    width: 176px;
  }  
}

.sqr-light-green {
  grid-column-start: 1;
  grid-column-end: 2;
  grid-row-start: 1;
  grid-row-end: 2;
  justify-self: right;
  align-self: flex-start;
  height: 6vh;
  width: 6vh;
  background-color: $color__green-light-1;
  margin-right: 1rem;

  @include desktop {
    grid-column-start: 2;
    grid-column-end: 3;
    grid-row-start: 1;
    grid-row-end: 2;
    margin-right: 0rem;
  }  
}

.event-info {
 margin-left: $base__space-unit / 2;
 grid-column-start: 1;
 grid-column-end: 4;
 grid-row-start: 4;
 grid-row-end: 5;
 padding-top: 0.5rem;
 padding-bottom: 0.5rem;
 z-index: 2;
 width: 100%;

  @include desktop {
    grid-column-start: 5;
    grid-column-end: 9;
    grid-row-start: 2;
    grid-row-end: 4;
    position: relative;
  }  

.site-title-heading {
  font-size: 1rem;
  margin-top: 0.5rem;
  margin-bottom: 0.5rem;
}

.event-title {
  font-size: 4.5rem;
  margin-top: .5rem;
  margin-bottom: .5rem;
  line-height: 1.2;
}
.location {
  margin-bottom: 0px;
  @include desktop {
    margin-top: 3rem;
  }
}
}

.event-info-li {
  border-bottom: $line_green;
  width: 75%;

  @include desktop {
  width: 750px;
  position: absolute;
  top: 235px;
  left: 0px;
  z-index: 5;
}
}


.hero-img-2 {
  grid-column-start: 1;
  grid-column-end: 4;
  grid-row-start: 5;
  grid-row-end: 6;
  background-image: url(../assets/images/heroimage02.jpeg);
  background-size: cover;
  background-position: right;
  height: 351px;
  width: 351px;
  margin: 0 auto;
  margin-top: 1rem;
  margin-bottom: 3rem;
  z-index: 1;

  @include desktop {
    grid-column-start: 9;
    grid-column-end: 17;
    grid-row-start: 1;
    grid-row-end: 4;
    height: 776px;
    width: 100%;
    margin: 0px;
  }  
}

.hero-img-3 {
  display: none;

  @include desktop {
    background-image: url(../assets/images/heroimage03.png);
    background-size: cover;
    background-position: right;
    display: grid;
    grid-column-start: 17;
    grid-column-end: 21;
    grid-row-start: 1;
    grid-row-end: 3;
    height: 504px;
    width: 100%;
    margin: 0px;
    z-index: 2;

  }  
}

.light-green-bkgrd {
  background-color: $color__background-green;
  width: 100%;
  height: 1162px;
  grid-column-start: 3;
  grid-column-end: 4;
  grid-row-start: 1;
  grid-row-end: 6;
  position: absolute;
  top: -20px;


  @include desktop {
  grid-column-start: 13;
  grid-column-end: 21;
  width: 100%;
  height: 1080px;
  top: -207px;
  }
}

.sqr-dr-green-hidden {
    display: none;
  
    @include desktop {
      display: grid;
      background-color: $color__green-1;
      grid-column-start: 17;
      grid-column-end: 19;
      grid-row-start: 3;
      grid-row-end: 4;
      height: 176px;
      width: 176px;
      z-index: 2;
    }  
  }

.banner-widgets {
  display: none;

  @include desktop {
  display:grid;
  grid-column-start: 18;
  grid-column-end: 20;
  grid-row-start: 4;
  grid-row-end: 5;
  z-index: 2;
  }

  .social-icons {
    display: flex;
    justify-content: space-between;
    list-style: none;
    width: 12.5rem;
    margin: 0px;
    a {
      text-decoration: none;
    }
  }
		.fa-facebook-square, 
		.fa-instagram,
		.fa-twitter {
      display: flex;
      justify-content: center;
      align-items: center;
			color: white;
			font-size: 29px;
			background: #000;
      height: 48px;
      width: 48px;
			border-radius: 1px;
			margin-bottom: 10px;
		 } 
  }

// mission statement section

.mission-statement {
  background-color: $color__background-grey;
  padding-top: 2rem;
  padding-bottom: 2rem;
  text-align: center;
  @include desktop {
    padding-top: 5rem;
    padding-bottom: 5rem;
  }

  h2 {
    font-size: 1.5rem;
  }

  h4{
    font-size: 2.25rem;
    margin-top: 0px;
  }
}

.mission-text {
  width: 98%;
  margin: 0 auto;

  @include desktop {
    width: 40%;
  }
}

.event-description {
  @include desktop {
    width: 75%;
    margin: 0 auto;
  }
}

// event feature section

.event-features {
  @include desktop {
  position: relative;
}
}

.widget-area {
  @include desktop {
    display: grid;
    grid-gap: 1rem;
    grid-template-columns: 1fr 2fr;
    grid-template-rows: repeat(2, 1fr);
  }
}


#event-feature-widget-2 {
  @include desktop {
  grid-column-start: 2;
  grid-column-end: 3;
  grid-row-start: 1;
  grid-row-end: 2;
  padding-left: 5rem;
  padding-top: 8rem;
}
}


#event-feature-widget-3 {
  @include desktop {
  grid-column-start: 1;
  grid-column-end: 2;
  grid-row-start: 2;
  grid-row-end: 3;
}
}

.light-green-bkgrd-ef {
  background-color: $color__background-green;
  width: 50%;
  height: 100px;
}

.three-col-img-grid {
  @include grid-3;
  grid-gap: 1rem;
  width: 95%;
  padding-top: 5rem;

  @include desktop {
  width: 35%;
  position: absolute;
  top:50px;
  padding-top: 0rem;
  }
}

.lions-gate-img {
  background-image: url(../assets/images/vancouver01.jpeg);
  background-size: cover;
  background-position: center;
  grid-column-start: 1;
  grid-column-end: 2;
  width: 100%;
  height: 288px;
  @include desktop {
    height: 600px;
  }
}

.false-creek-img {
  background-image: url(../assets/images/vancouver02.jpeg);
  background-size: cover;
  background-position: right;
  grid-column-start: 2;
  grid-column-end: 4;
  width: 100%;
  height: 288px;
  @include desktop {
    height: 600px;
  }
}

.three-col-img-grid-drone {
  @include grid-3;
  grid-gap: 1rem;
  width: 95%;
  padding-top: .5rem;
}

.drone-img-1 {
  background-image: url(../assets/images/droneshot01.jpeg);
  background-size: cover;
  background-position: center;
  grid-column-start: 1;
  grid-column-end: 3;
  width: 100%;
  height: 360px;
}

.drone-img-2 {
  background-image: url(../assets/images/droneshot02.jpeg);
  background-size: cover;
  background-position: right;
  grid-column-start: 3;
  grid-column-end: 4;
  width: 100%;
  height: 360px;
}

.event-feature-widget {
  width: 98%;
  margin-left: $base__space-unit / 2;

  h2 {
    font-size: 1.5rem;
  }
  h4{
    font-size: 2.25rem;
    margin-top: 0px;
    margin-bottom: 1rem;
  }
}

// priority section

.priorities {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  background-color: $color__background-grey;
  padding-top: 2rem;
  padding-bottom: 4.5rem;
  width: 98%;
  margin: 0 auto;
}

.priority-header {
  h2 {
    font-size: 1.5rem;
  }
  h4 {
    font-size: 2.25rem;
  }
}

.priority-energy {
  text-align: center;
}

.energy-icon {
  width: 100px;
}

.priority-transport {
  text-align: center;
}

.transport-icon {
  width: 100px;
}

.priority-7rs {
  text-align: center;
}

.rs-icon {
  width: 100px;
}

.volunteer-button {
  background-color: $color__green-1;
  width: 90%;
  text-align: center;
  padding: .4rem;
  margin-bottom: $base__space-unit; 
}

.volunteer-button-text {
  text-transform: uppercase;
  text-decoration: none;
  color: $color__background-white;;
    p {
    margin: 0px;
    }
}

.donate-button {
  border: solid $color__green-1 .15rem;
  width: 90%;
  text-align: center;
  padding: .4rem;
}

.donate-button-text {
  text-transform: uppercase;
  text-decoration: none;
  color: $color__green-1;
    p {
    margin: 0px;
    }
}

.hero-img-bkgd {
  background-image: url(../assets/images/homescreendivider01.jpeg);
  background-size: cover;
  background-position: center;
  height: 592px;
  width: 100%;
}

// speaker sponsor section

.sponsor-title {
  width: 98%;
  padding-left: 0.75rem;
  h3 {
    margin: 0px;
    font-size: 1.5rem;
    padding-top: 7rem;
  }
  h4 {
    font-size: 4.5rem;
    margin: 0px;
  }
}

.speakers-carousel-cell {
  margin: 0.5rem;
  p {
    margin: 0px;
    font-size: 1rem;
  }
}

.speaker-img {
  height: 226px;
  width: 226px;
}

.sponsor-name {
  font-family: 'montserratbold', sans-serif;
}

.speaker-section {
  background-color: $color__background-green;
  padding-bottom: 5rem;
  .carousel-pagination-buttons {
    display: flex;
  }
  .carousel-pagination-prev {
    display: flex; 
    justify-content: center;
    align-items: center;
    padding: 1.5rem;
    margin: 0.5rem;
    border: 0.2rem solid $color__green-1;
    border-radius: 50%;
    color: $color__green-1;
    font-size: 1rem;
    width: 76px;
    height: 76px;
  }
  .carousel-pagination-next {
      display: flex; 
      justify-content: center;
      align-items: center;
      padding: 1.5rem;
      margin: 0.5rem;
      border: 0.2rem solid $color__green-1;
      border-radius: 50%;
      color: $color__green-1;
      font-size: 1rem;
      width: 76px;
      height: 76px;
    }
  .carousel {
    .flickity-page-dots {
      display: none;
    }
    .flickity-prev-next-button {
		  display: none;
    }
    .flickity-slider {
      margin-left: .75rem;
    }
  }
}

// host section 

.brought-by {
  display: flex; 
  flex-direction: column;
  align-items: center;
  padding-top: 3rem;
  padding-bottom: 3rem;
  h3 {
    font-size: 1.5rem;
  }
}

.host-logo-img {
  width: 351px;
  height: 95px;
 }

 // back to top section 

 .top-return {
   display: flex; 
   flex-direction: column;
   justify-content: center;
   align-items: center;
   padding-bottom: 3rem;
 }

 .return-arrow-up {
  a {
    text-decoration: none;
    }
   .fa-arrow-up {
    display: flex; 
    justify-content: center;
    align-items: center;
    padding: 1.5rem;
    margin: 0.5rem;
    border: 0.2rem solid $color__green-1;
    border-radius: 50%;
    color: $color__background-white;
    background-color: $color__green-1;
    font-size: 1rem;
    width: 76px;
    height: 76px;
   }
}

